Color Contrast Fix

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ footer {
 
 .updated {
     font-size: 10pt;
-    color: rgb(234, 238, 20);
+    color: #11023a;
 }
 
 a {
